src/Test/Fixtures/Good/Arrays/u64ArrayDeclaration.lf
let us: [u64; 2] = [10, 20];