src/Test/Fixtures/Bad/TypeQualifier/trailingCommaInScratchQalloc.lf
let scratch qs: [qubit; 2] = qalloc(2,);
